# PhysGuard-ICS

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SHA256SUMS.txt  SUPPORT.md  environment.yml  pyproject.toml  release_manifest.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
dashboard/: __init__.py  app.py
docs/: ARCHITECTURE.md  AUTHENTICITY.md  DATASET_GUIDE.md  RELEASE_REPORT.md
examples/: README.md  run_example.py
physguard/: __init__.py  analysis.py  cli.py  config.py  experiments.py
physguard/data/: example.yaml
sample_data/: test.csv  train.csv  validation.csv
scripts/: create_sample_data.py  release_integrity.py
tests/: test_analysis.py  test_cli.py  test_experiments.py  test_release_integrity.py
