[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physguard-ics"
version = "1.0.0"
description = "Offline physics-aware anomaly triage for industrial telemetry."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{name = "Ahmad Alzayer"}]
keywords = ["ics", "cybersecurity", "anomaly-detection", "physics-aware"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<4",
  "PyYAML>=6.0,<7",
  "streamlit>=1.40,<2",
  "plotly>=5.24,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13,<2",
  "pandas-stubs>=2.2,<3",
  "pytest>=8,<10",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0.12,<7",
]

[project.scripts]
physguard = "physguard.cli:main"

[project.urls]
Homepage = "https://github.com/Alzayer8/PhysGuard-ICS"
Repository = "https://github.com/Alzayer8/PhysGuard-ICS"
Documentation = "https://github.com/Alzayer8/PhysGuard-ICS/tree/main/docs"
Issues = "https://github.com/Alzayer8/PhysGuard-ICS/issues"
Changelog = "https://github.com/Alzayer8/PhysGuard-ICS/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["physguard*"]

[tool.setuptools.package-data]
physguard = ["py.typed", "data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["example-workspace"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["physguard"]
